Improved constructor retrieval approach (#2382)
Attempting to use current class'es classloader first to load a class and only if that fails, trying context classloader.